feat(docker): Max ram percentage